<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>charuco_ros2</name>
  <version>0.0.0</version>
  <description>Camera calibration for ROS2 using charuco</description>

  <maintainer email="ptrmu@outlook.com">Peter Mullen</maintainer>
  <license>BSD 3 clause</license>

  <url type="repository">https://github.com/ptrmu/charuco_ros2.git</url>
  <url type="bugtracker">https://github.com/ptrmu/charuco_ros2/issues</url>

  <author>Peter Mullen</author>
  <author>Clyde McQueen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>charuco_ros2_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>rclcpp</depend>
  <depend>ros2_shared</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>yaml_cpp_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
